opam-version: "1.2"
name: "redbasis"
version: "0.0"
maintainer: "Jonathan Sterling"
authors: "Jonathan Sterling"
homepage: "https://github.com/jonsterling/redtt"
bug-reports: "https://github.com/jonsterlign/redtt/issues"
license: "MIT"
dev-repo: "https://github.com/jonsterling/redtt"
build: [
  ["jbuilder" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
]
available: ocaml-version >= "4.06.1"
