opam-version: "1.2.2"
name: "redml"
version: "0.0"
maintainer: "Jonathan Sterling"
authors: ["Jon Sterling" "Favonia (Kuen-Bang Hou)"]
homepage: "https://github.com/jonsterling/redtt"
bug-reports: "https://github.com/jonsterlign/redtt/issues"
license: "MIT"
dev-repo: "https://github.com/jonsterling/redtt"
build: [
  ["dune" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
]
available: ocaml-version >= "4.07.0"
