opam-version: "2.0"
name: "redtt"
version: "0.0"
maintainer: "jmsterli@cs.cmu.edu"
authors: ["The RedPRL Development Team"]
homepage: "https://github.com/RedPRL/redtt"
bug-reports: "https://github.com/RedPRL/redtt/issues"
dev-repo: "git://github.com/RedPRL/redtt.git"
license: "Apache-2.0"
depends: [
  "cmdliner" {>= "1.0.2"}
  "uuseg" {>= "11.0.0"}
  "uutf" {>= "1.0.1"}
  "dune" {build & >= "1.4.0"}
  "lwt" {>= "4.1.0"}
  "menhir" {>= "20180703"}
]
build: [
  ["dune" "build" "-p" name "@install" "-j" jobs]
]
