opam-version: "2.0"
name: "redtt"
version: "0.0"
maintainer: "jmsterli@cs.cmu.edu"
authors: ["The RedPRL Development Team"]
homepage: "https://github.com/RedPRL/redtt"
bug-reports: "https://github.com/RedPRL/redtt/issues"
dev-repo: "git://github.com/RedPRL/redtt.git"
license: "Apache-2.0"
synopsis: "The redtt proof assistant"
depends: [
  "cmdliner" {>= "1.0.4"}
  "uuseg" {>= "12.0.0"}
  "uutf" {>= "1.0.2"}
  "dune" {build & >= "2.1.1"}
  "lwt" {>= "5.1.1"}
  "menhir" {>= "20190924"}
  "ezjsonm" {= "1.1.0"}
  "ezgzip" {= "0.2.3"}
]
build: [
  ["dune" "build" "-p" name "@install" "-j" jobs]
]
