opam-version: "2.0"
name: "redtt_core"
version: "0.0"
maintainer: "Jonathan Sterling"
authors: ["Jon Sterling" "Favonia (Kuen-Bang Hou)"]
homepage: "https://github.com/jonsterling/redtt"
bug-reports: "https://github.com/jonsterling/redtt/issues"
license: "MIT"
dev-repo: "git://github.com/jonsterling/redtt.git"
build: [
  ["dune" "build" "--only-packages" name "-p" name
   "-j" jobs "@install"]
]
depends: [
  "ocaml" {>= "4.07.0"}
]
