(menhir
 (flags --explain --interpret-show-cst --table)
 (modules Grammar))

(ocamllex Lex)

(library
 (name RedTT)
 (public_name redtt)
 ; for warning numbers (the part after "-w") see "ocamlc -warn-help"
 (flags
  (:standard -w +a-3-4-6-9-22-26-27-30-32-39-40-41-42-44-48-60 -safe-string -short-paths -strict-formats -strict-sequence))
 (ocamlopt_flags
  (:standard -w +a-3-4-6-9-22-26-27-30-32-39-40-41-42-44-48-60 -safe-string -short-paths -strict-formats -strict-sequence -O3 -bin-annot -unbox-closures -inlining-report))
 (libraries
  lwt.unix
  redtt.basis
  redtt.core
  uuseg
  uuseg.string
  uutf
  menhirLib))
